# logical-juggling

./: Main.hs  README.md  j.cabal  logical-juggling.cabal  stack.yaml
app/: Console.hs  Server.hs
examples/: krönung.lj  pat.lj  simple.lj
src/: BB.hs  Data.hs  Param.hs  Parse.hs  Semantics.hs  Syntax.hs
