name:                logical-juggling
version:             0.1.0.0
synopsis:            
description:         Please see README.md
homepage:            https://github.com/githubuser/logical-juggling
license:             GPL3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Syntax,Semantics,Param,Parse,Data
  build-depends:       base >= 4.7 && < 5, ersatz
                     , mtl, containers, array, parsec, text
  default-language:    Haskell2010

executable logical-juggling-server
  hs-source-dirs:      app
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base , logical-juggling, yesod
  default-language:    Haskell2010

executable logical-juggling-console
  hs-source-dirs:      app
  main-is:             Console.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base , logical-juggling, text
  default-language:    Haskell2010

test-suite j-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , logical-juggling
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jwaldmann/logical-juggling
